--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <div class="row">
                 <div class="col-md-7">
                   <p class="lead">中島美雪（1952年2月23日—）是出生於日本北海道札幌市的創作型女歌手、音樂家、詞曲作家、主持人。中島美雪於1975年出道，於80年代取得巨大成功，直至今日。數十年來，中島美雪的歌曲被大量翻唱和改編，其中不乏一些歌手的著名曲目。在日本，中島美雪沉鬱的曲風和在廣播節目中開朗的語氣之間的落差廣為人知。</p>
-                  <p>中島美雪是我最愛的創作家，她創作的歌曲富有深度和情感，是一首詩、一則故事，聽了她的作品，讓我對現代流行音樂提不起興趣。</p>
+                  <p>中島美雪是我最喜歡的創作家，她創作的歌曲富有深度和情感，是一首詩、一則故事，聽了她的作品，讓我對現代流行音樂提不起興趣。</p>
                 </div>
                 <div class="col-md-5">
                   <img src="pic2023.jpg" class="img-fluid">
